fix(updater): honour the quay a SIRI journey names when fuzzy matching
The candidate lookup unioned the named quay, the same quay a service day
later and every sibling quay of the station, so a trip the journey never
described could compete with the one it did and turn a single match into
a rejected ambiguity. Search the three in order instead, widening only
where the narrower lookup finds nothing.